--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,25 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.32.0
-pydantic>=2.10.0
-pydantic-settings>=2.6.0
-asyncpg>=0.30.0
-aiosqlite>=0.19.0
-python-dotenv>=1.0.1
-sqlalchemy>=2.0.0
-httpx>=0.27.0
+# Web Framework
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
-# Stock Data (0.2.31 사용 - curl_cffi SSL 문제 회피)
-yfinance>=0.2.31,<0.2.37
+# Database
+asyncpg>=0.27.0
+aiosqlite>=0.19.0
+sqlalchemy[asyncio]>=2.0.0
+
+# Utilities
+python-dotenv>=1.0.0
+httpx>=0.24.0
+
+# Stock Data
+yfinance>=0.2.40
+pykrx>=1.0.0
 pandas>=2.0.0
-numpy>=1.24.0
+numpy>=2.0.0
+setuptools  # pykrx requires pkg_resources
 
 # LLM Providers
 openai>=1.0.0
-anthropic>=0.34.0
+anthropic>=0.18.0
