--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:pages": "npx @cloudflare/next-on-pages",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "preview": "wrangler pages dev"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -26,6 +28,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.16",
     "@playwright/test": "^1.58.0",
     "@tailwindcss/postcss": "^4",
     "@types/estree": "^1.0.8",
