fix: CORS 세미콜론 구분자 지원 및 API URL 수정
- backend: CORS_ORIGINS 환경변수에서 세미콜론(;) 구분자 지원 추가
- frontend: wrangler.toml에서 Koyeb 기본 URL 사용 (커스텀 도메인 충돌 해결)

Koyeb CLI가 쉼표를 인자 구분자로 인식하는 문제 해결

--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -4,4 +4,4 @@ compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
 
 [vars]
-NEXT_PUBLIC_API_URL = "https://api.alphainsightai.com"
+NEXT_PUBLIC_API_URL = "https://stock-insight-api-zerocoke-labs-425ef635.koyeb.app"
