feat: Polar.sh 프로덕션 전환 및 메인 페이지 UI 개선
- Polar 결제 시스템 Sandbox → Production 전환
- CTA 버튼 텍스트 "무료로 시작하기" → "지금 시작하기" 변경
- 메인 페이지에 Apple(AAPL) 데모 분석 리포트 섹션 추가

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,7 +24,7 @@ FINNHUB_API=your-finnhub-api-key
 # Polar 결제 설정
 POLAR_API_KEY=polar_oat_your-polar-api-key
 # 테스트용 (Sandbox)
-POLAR_BASE_URL=https://sandbox-api.polar.sh/v1
+# POLAR_BASE_URL=https://sandbox-api.polar.sh/v1
 # 프로덕션용
-# POLAR_BASE_URL=https://api.polar.sh/v1
+POLAR_BASE_URL=https://api.polar.sh/v1
 POLAR_PRODUCT_ID=your-polar-product-id
